修改成果管理

--- a/AgricultureR/hjgl.html
+++ b/AgricultureR/hjgl.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 		<title>农地确权数据成果汇交管理系统V1.1</title>
-		
+		<link rel="stylesheet" href="http://localhost/jsapi/3.15/esri/css/esri.css">
 		<link href="css/jquery-ui.min.css" rel="stylesheet">
 		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -11,7 +11,7 @@
 		<link href="css/bootstrapValidator.min.css" rel="stylesheet">
 		<link href="css/select2.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/daterangepicker.css" />
-		<link href="http://localhost/jsapi/3.15/esri/css/esri.css">
+		
 		<link href="css/XTGL-YHGL-XDF.css" rel="stylesheet">
 		<link href="css/custom427.css" rel="stylesheet">
 		
@@ -22,6 +22,7 @@
 		<script src="js/jquery.iframe-transport.js"></script>
 		<script src="js/jquery.jqprint-0.3.js"></script>
 		<script src="js/bootstrap.min.js"></script>
+		<script src="js/bootstrap-carousel.js"></script>
 		<script src="js/bootstrap-table.min.js"></script>
 		<script src="js/bootstrap-table-editable.min.js"></script>
 		<script src="js/bootstrap-editable.js"></script>
