--- a/AgricultureR/assets/hjglSeg-4.html
+++ b/AgricultureR/assets/hjglSeg-4.html
@@ -1,4 +1,4 @@
-<div style="width: 95%;height: 100%;margin: 5px auto;">
+<div id="hjglseg-4" style="width: 95%;height: 100%;margin: 5px auto;">
 	<div id="queryPane" class="queryPane_sjfx">
 		<div class="filter_tip" style="margin-left: 15px;">
 			<label for="proQuery">省：</label>
@@ -20,13 +20,7 @@
 			<label for="tTime_hjcl" >结束时间</label>
 			<input id="tTime_hjcl"  type="text" value="2016/6/25" />
 		</div>&nbsp;&nbsp;&nbsp;&nbsp;
-		<div class="filter_tip">
-			<label for="sTime_hjcl">统计指标</label>
-			<select id="indQuery">
-				<option value="100105">汇交数量</option>
-				<option value="100105">汇交次数</option>
-			</select>
-		</div>
+		
 		
 	</div>
 	
@@ -56,7 +50,7 @@
 
 		</div>
 		<div id="qzxx_sjfx" role="tabpanel" class="tab-pane fade" style="width: 100%;height: 100%;">
-
+			
 			
 		</div>
 		<div id="cbf_sjfx" role="tabpanel" class="tab-pane fade" style="width: 100%;height: 100%;">
