--- a/AgricultureR/assets/sjfxSeg-1.html
+++ b/AgricultureR/assets/sjfxSeg-1.html
@@ -1,8 +1,8 @@
 <div class="container_hjdy" style="width: 100%;height: 100%;">
-	<div style="float:left;width: 40%;height: 100%;border-right: solid 3.5px #EDEDED;">
-		<div style="height: 100%;width: 100%;">
+	<div id="tableContainer_sjfx1" class="collapse in" style="float:left;width: 40%;height: 100%;">
+		<div style="height: 100%;width: 98%;">
 			<h3 style="width: 100%;text-align: center;">全国地块汇总统计情况统计表（XX年X月X日）</h3>
-			<table class="table table-striped">
+			<table class="table table-bordered">
 				<thead>
 	             <th>区域</th>
 	             <th>发包方数量</th>
@@ -12,7 +12,7 @@
 	             <th>承包地比率</th>
 	             <th>非承包地块数量</th>
 	             <th>非承包地面积</th>
-	             <th>承包地比率</th>	             			             
+	             <th>承包地比率</th>
 	            </thead>
 	            <tbody>
 	            <tr>
@@ -70,11 +70,23 @@
 		</div>
 		
 	</div>
-	<div style="float: left;width: 60%;height: 100%;overflow-y: auto;">				
-		<div id="chart_dkfx" style="width: 100%;height: 100%;margin: 0px;padding: 0px;">
+	<div style="float: left;width: 12px;height: 100%;border-right: solid 3.5px #229A56;">
+		<span id="collapseBtn" class="glyphicon glyphicon-circle-arrow-left" style="top:50%;color:#229A56;font-weight: 600;" data-toggle="collapse" data-target="#tableContainer_sjfx1"></span>
+	</div>
+	<div id="chartContainer_sjfx1" style="float: left;width: 58%;height: 100%;overflow-y: auto;">				
+		<div class="sjfx_r_pane" id="chart_dkfx" style="width: 98%;height: 100%;margin: 0px;padding: 0px;">
 			
 		</div>
-		<div id="map_dkfx" style="width: 100%;height: 100%;margin: 0px;padding: 0px;">
+		<div class="sjfx_r_pane" id="circle1_dkfx" style="width: 98%;height: 100%;margin: 0px;padding: 0px;">
+			
+		</div>
+		<div class="sjfx_r_pane" id="circle2_dkfx" style="width: 98%;height: 100%;margin: 0px;padding: 0px;">
+			
+		</div>
+		<div class="sjfx_r_pane" id="pjmj_dkfx" style="width: 98%;height: 100%;margin: 0px;padding: 0px;">
+			
+		</div>
+		<div class="sjfx_r_pane" id="map_dkfx" style="width: 98%;height: 100%;margin: 0px;padding: 0px;">
 			
 		</div>
 		
