--- a/AgricultureR/assets/hjyySeg-2.html
+++ b/AgricultureR/assets/hjyySeg-2.html
@@ -60,7 +60,7 @@
 				<div class="formRightPane">
 					
 					<div class="form-group">
-					    <label for="sjbdx" class="control-label">数据包大小</label>							    
+					    <label for="sjbdx" class="control-label">数据包大小(GB)</label>							    
 					    <div class="input-group">
 		                    <input type="text" name="sjbdx" id="sjbdx" class="form-control">
 		                   
