--- a/AgricultureR/assets/hjyySeg-5.html
+++ b/AgricultureR/assets/hjyySeg-5.html
@@ -38,8 +38,7 @@
 							<dd style="">
 								<a id="sjtjzmBtn" href="#" >生成</a>																
 							</dd>
-							<dt>《数据审核结果通知单》</dt>
-							<dd><a id="sjshzmBtn" href="#" >生成</a>	</dd>
+							
 						</dl>
 					</div>
 				</div>
@@ -61,48 +60,48 @@
 					</h1>
 					<br />
 <p>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <span id="dateTJZM">2016年5月5日</span>收到<span id="dwTJZM">北京市农规院</span>第<span id="nTJZM">1</span>次提交的农村土地承包经营权确权登记数据。
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="dateTJZM"></span>收到<span id="dwTJZM"></span>第<span id="nTJZM"></span>次提交的<span id="QuXian"></span>的农村土地承包经营权确权登记数据。
 </p>
 <p>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 提供方代表：<span id="ryTJZM">卢萌></span>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; 提供方代表：<span id="ryTJZM"></span>
 </p>
 <p>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 提交数据情况如下：
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;提交数据情况如下：
 </p>
-<blockquote>
+<div>
 	<p>
-		&nbsp; &nbsp; &nbsp; &nbsp; 数据载体为<span id="hjjzTJZM">移动硬盘</span>数据大小为<span id="sjbdxTJZM">200</span>G,内容包括：
+		 &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;数据载体为<span id="hjjzTJZM">移动硬盘</span>数据大小为<span id="sjbdxTJZM"></span>G,内容包括：
 	</p>
 	<p>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 1、矢量数据,数据大小为<span id="slsjdxTJZM">100</span>G，数据文件<span id="slsjslTJZM">10000</span>个;
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 1、矢量数据,数据大小为<span id="slsjdxTJZM"></span>G，数据文件<span id="slsjslTJZM"></span>个;
 	</p>
 	<p>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 2、栅格数据,数据大小为<span id="sgsjdxTJZM">100</span>G，数据文件<span id="sgsjslTJZM">10000</span>个;
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 2、栅格数据,数据大小为<span id="sgsjdxTJZM"></span>G，数据文件<span id="sgsjslTJZM"></span>个;
 	</p>
 	<p>
-		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3、汇总表格,数据大小为<span id="hzbgdxTJZM">100</span>G，数据文件<span id="hzbgslTJZM">10000</span>个;
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 3、汇总表格,数据大小为<span id="hzbgdxTJZM"></span>G，数据文件<span id="hzbgslTJZM"></span>个;
 	</p>
 	<p>
-		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 4、图件数据,数据大小为<span id="tjsjdxTJZM">100</span>G，数据文件<span id="tjsjslTJZM">10000</span>个;
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 4、图件数据,数据大小为<span id="tjsjdxTJZM"></span>G，数据文件<span id="tjsjslTJZM"></span>个;
 	</p>
 	<p>
-		<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 5、权属数据,数据大小为<span id="qssjdxTJZM">100</span>G，数据文件<span id="qssjslTJZM">10000</span>个;</span>
+		<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 5、权属数据,数据大小为<span id="qssjdxTJZM"></span>G，数据文件<span id="qssjslTJZM"></span>个;</span>
 	</p>
 	<p>
-		<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 6、文字报告,数据大小为<span id="wzbgdxTJZM">100</span>G，数据文件<span id="wzbgslTJZM">10000</span>个;</span>
+		<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 6、文字报告,数据大小为<span id="wzbgdxTJZM"></span>G，数据文件<span id="wzbgslTJZM"></span>个;</span>
 	</p>
 	<p>
-		<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 7、其他资料,数据大小为<span id="qtzldxTJZM">100</span>G，数据文件<span id="qtzlslTJZM">10000</span>个;</span>
+		<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 7、其他资料,数据大小为<span id="qtzldxTJZM"></span>G，数据文件<span id="qtzlslTJZM"></span>个;</span>
 	</p>	
-</blockquote>
+</div>
 <p>
 	<br />
 </p>
 <p>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 由我单位负责采取有效的保管（保密）措施，对以上数据进行质量检查和数据（预）汇交。
+	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;由我单位负责采取有效的保管（保密）措施，对以上数据进行质量检查和数据（预）汇交。
 </p>
 <p>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 特此证明！
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; 特此证明！
 </p>
 <p>
 </p>
@@ -119,10 +118,10 @@
 	<span style="line-height:1.5;">&nbsp; &nbsp;&nbsp;</span><span style="line-height:1.5;">&nbsp; &nbsp;&nbsp;</span>
 </p>
 <p style="text-align:right;">
-	 农业部规划设计研究院农业资源监测站&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+	 农业部规划设计研究院农业资源监测站&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
 </p>
 <p style="text-align:right;">
-	<span style="line-height:1.5;">&nbsp;</span><span style="line-height:1.5;"><span id="gzdateTJZM">2016年5月5日</span> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span>
+	<span style="line-height:1.5;">&nbsp;</span><span style="line-height:1.5;"><span id="gzdateTJZM">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;年&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;月&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;日</span> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;</span>
 </p><br /><br />
 										
 				</div>
