数据分析，指标框完成，请求数据测试完成；悬浮框待定

--- a/AgricultureR/hjgl.html
+++ b/AgricultureR/hjgl.html
@@ -11,7 +11,7 @@
 		<link href="css/bootstrapValidator.min.css" rel="stylesheet">
 		<link href="css/select2.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/daterangepicker.css" />
-		
+		<link rel="stylesheet" href="css/bootstrap-treeview.min.css"  />
 		<link href="css/XTGL-YHGL-XDF.css" rel="stylesheet">
 		<link href="css/custom427.css" rel="stylesheet">
 		
@@ -30,6 +30,7 @@
 		<script src="js/bootstrap-table-zh-CN.js"></script>
 		<script src="js/bootstrap-suggest.js"></script>
 		<script src="js/bootstrapValidator.min.js"></script>
+		<script src="js/bootstrap-treeview.min.js"></script>
 		<script src="js/select2.min.js"></script>
 		<script src="assets/js/hjgl.js"></script>
 		<script src="js/mindmup-editabletable.js"></script>
