--- a/AgricultureR/hjgl.html
+++ b/AgricultureR/hjgl.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 		<title>农地确权数据成果汇交管理系统V1.1</title>
 		<link rel="stylesheet" href="http://localhost/jsapi/3.15/esri/css/esri.css">
+		<link rel="stylesheet" href="http://localhost/jsapi/3.15/dijit/themes/tundra/tundra.css" >
 		<link href="css/jquery-ui.min.css" rel="stylesheet">
 		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -12,6 +13,7 @@
 		<link href="css/select2.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/daterangepicker.css" />
 		<link rel="stylesheet" href="css/bootstrap-treeview.min.css"  />
+		
 		<link href="css/XTGL-YHGL-XDF.css" rel="stylesheet">
 		<link href="css/custom427.css" rel="stylesheet">
 		
